--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 30
@@ -31,6 +32,10 @@ android {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
 }
 
 dependencies {
@@ -51,7 +56,7 @@ dependencies {
 
     //room
     implementation 'androidx.room:room-runtime:2.3.0-alpha02'
-//    implementation "io.reactivex.rxjava2:rxjava:2.2.19"
+//  implementation "io.reactivex.rxjava2:rxjava:2.2.19"
 
     //ld
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
@@ -59,12 +64,16 @@ dependencies {
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation("io.strikt:strikt-core:0.26.1")
 
-//    implementation io.reactivex.rxjava3.kotlin.subscribeBy
+    //implementation io.reactivex.rxjava3.kotlin.subscribeBy
     implementation("io.reactivex.rxjava3:rxkotlin:3.0.0")
     implementation "androidx.lifecycle:lifecycle-reactivestreams:2.2.0"
     testImplementation 'android.arch.core:core-testing:1.1.1'
 
-
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+    kapt "com.android.databinding:compiler:2.2.0"
+
+    //timber
+    implementation 'com.github.ajalt:timberkt:1.5.1'
+
 
 }
